[project]
name = "nxcypher-bolt"
version = "0.1.0"
authors = [
    { name = "Gregorio Momm" }
]
requires-python = ">=3.10"
dependencies = [
    "nxcypher>=1.1.0",
    "networkx>=3.4.2",
]
description = "Neo4j Bolt protocol server for nxcypher - enables Neo4j drivers to query NetworkX graphs."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]

[project.scripts]
nxcypher-bolt = "nxcypher_bolt.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nxcypher_bolt"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.5",
]
